--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   injectable: ^2.5.0
   get_it: ^8.0.3
   internet_connection_checker: ^1.0.0+1
+  flutter_secure_storage: ^9.2.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
